evolution-data-server3 (3.2.0-1) UNRELEASED; urgency=low

  * New upstream release.
    - correctly use secure connection (if used in imap) when storing mail in
      sent folder.  This fixes CVE-2011-3355.                   closes: #641052

 -- Yves-Alexis Perez <corsac@debian.org>  Fri, 30 Sep 2011 21:53:18 +0200

evolution-data-server3 (3.0.3-2) unstable; urgency=low

  * debian/control:
    - make -dev packages depend on corresponding gir package.

 -- Yves-Alexis Perez <corsac@debian.org>  Fri, 02 Sep 2011 23:47:23 +0200

evolution-data-server3 (3.0.3-1) unstable; urgency=low

  * New upstream bugfix release.
  * debian/rules:
    - delete .la files
  * debian/{control,libebook1.2-dev.install,gir1.2-ebook-1.2.install}:
    - install GObject introspect files for EBook library.

 -- Yves-Alexis Perez <corsac@debian.org>  Thu, 01 Sep 2011 22:20:25 +0200

evolution-data-server3 (3.0.2.1-1) unstable; urgency=low

  [ Yves-Alexis Perez ]
  * New upstream release.
  * debian/watch updated to track 3.x versions.
  * debian/patches:
    - 01_calendar_exit dropped, included upstream.
  * debian/control:
    - update standards version to 3.9.2.

  [ Josselin Mouette ]
  * Move Conflict against libedataserverui1.2-dev from the runtime 
    package to the development one.

 -- Josselin Mouette <joss@debian.org>  Fri, 19 Aug 2011 22:06:12 +0200

evolution-data-server3 (3.0.0-1) experimental; urgency=low

  * Rename source package to allow parallel installation/migration for
    libedataserverui.
  * New upstream stable release.
  * 01_calendar_exit.patch: stolen upstream. Fix a process not exiting 
    at the end of the session.
  * Fix short description for libcamel.
  * Automatically generate better shlibs for libcamel.
  * Tighten dependencies on libcamel and e-d-s-common.

 -- Josselin Mouette <joss@debian.org>  Sun, 10 Apr 2011 10:55:32 +0200

evolution-data-server (2.91.92-1) experimental; urgency=low

  * Bump libsoup build-dependency. Closes: #620090.