@@ -3,8 +3,14 @@ evolution-data-server3 (3.2.0-1) UNRELEASED; urgency=low
   * New upstream release.
     - correctly use secure connection (if used in imap) when storing mail in
       sent folder.  This fixes CVE-2011-3355.                   closes: #641052
+  * debian/control:
+    - drop hardening-includes and update debhelper build-dep to 8.9.4 for
+      hardening flags
+  * debian/rules:
+    - switch hardening flags setting to dh9 way.
+  * debian/compat bumped to 9.
 
- -- Yves-Alexis Perez <corsac@debian.org>  Fri, 30 Sep 2011 21:53:18 +0200
+ -- Yves-Alexis Perez <corsac@debian.org>  Fri, 30 Sep 2011 21:56:24 +0200
 
 evolution-data-server3 (3.0.3-2) unstable; urgency=low
 
